--- a/assignment_week9.Rmd
+++ b/assignment_week9.Rmd
@@ -196,8 +196,9 @@ Now the metadata will also be exported and added to the previously created `obj_
 #  1. Get the fields in results raw_json_data$results
 result_columns <- c("list_name", "list_name_encoded", "bestsellers_date", "published_date")
 
-#  2. Extract the return into a vector
+#  2. Extract the return into a list
 metadata <- raw_json_data$results[result_columns]
+str(metadata)
 
 #  3. Add new columns into the previous obj_df created
 obj_df <- obj_df |>
